fix: make divider full width on mobile

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -5,32 +5,11 @@
   width: 100%;
   display: flex;
   justify-content: space-between;
-  position: relative; /* нужно для позиционирования "разделителя" */
-}
-
-.header::after {
-  content: '';
-  position: absolute;
-  background-color: #545454;
-  opacity: 0.7;
-  width: 100%;
-  height: 1px;
-  bottom: 0;
-  left: 0;
-}
-
-@media (max-width: 768px) {
-  .header {
-    padding: 28px 0 30px;
-    box-sizing: border-box;
-  }
 }
 
 @media (max-width: 450px) {
-  .header::after {
-    width: calc(100vw - 17px);
-    left: 50%;
-    transform: translate(-50%, 0);
+  .header {
+    padding: 28px 0 30px;
   }
 }
 
