--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -2,7 +2,7 @@
   width: 150px;
   height: 50px;
   background-image: url('../../../images/addButton.svg');
-  background-size: 16px;
+  background-size: 22px;
   background-position: center;
   background-repeat: no-repeat;
   border-width: 2px;
@@ -19,5 +19,6 @@
 @media (max-width: 375px) {
   .profile__add-button {
     max-width: 282px;
+    background-size: 16px;
   }
 }
