--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -11,4 +11,5 @@
   -ms-text-size-adjust: 100%;
   -moz-text-size-adjust: 100%;
   color: #fff;
+  position: relative;
 }
